# delt

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: publish.yml
dev-tools/: format.sh  lint.sh
src/delt/: __init__.py  predict.py  train.py  types.py  version.py
src/delt/common/: __init__.py  experimental.py  io.py  iterables.py  llm.py  logging.py  prompting.py
src/delt/encoders/: __init__.py  base.py
src/delt/encoders/audio/: __init__.py  base.py  clap.py  glap.py  utils.py
src/delt/encoders/image/: __init__.py  base.py  clip.py  siglip.py
src/delt/encoders/text/: __init__.py  base.py  sentence_transformer.py
src/delt/encoders/video/: __init__.py  base.py  utils.py  xclip.py
src/delt/examples/: label_tuning.py
src/delt/examples/hard_distillation/: audio.py  image.py  text.py  video.py
src/delt/examples/pipelines/: audio.py  image.py  text.py  video.py
src/delt/examples/soft_distillation/: text.py
src/delt/pipelines/: __init__.py  audio.py  base.py  image.py  text.py  video.py
src/delt/teachers/: __init__.py  base.py
src/delt/teachers/audio/: __init__.py  lmm.py
src/delt/teachers/image/: __init__.py  lmm.py
src/delt/teachers/text/: __init__.py  llm.py
src/delt/teachers/video/: __init__.py  lmm.py
src/delt/ui/: __init__.py  app.py
