[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "deltpy"
version = "1.4.2"
description = "A Python framework for Label Tuning of Multimodal Dual Encoders."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
authors = [
    { name = "José Ángel González", email = "ja.gonzalez.barba@gmail.com" }
]
keywords = ["deep-learning", "multimodal", "label tuning", "contrastive learning"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "protobuf>=6.32.1",
    "scikit-learn>=1.7.2",
    "sentence-transformers<=5.6.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.14.0",
    "streamlit>=1.52.1",
    "streamlit-audiorecorder>=0.0.6",
    "transformers<6.0.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "glap-model>=0.0.13",
    "av>=17.1.0",
    "yt-dlp>=2026.6.9",
    "torchcodec==0.10.0",
    "python-dotenv>=1.2.2",
    "litellm>=1.92.0",
]

[project.urls]
Homepage = "https://github.com/jogonba2/delt"
Repository = "https://github.com/jogonba2/delt"
Issues = "https://github.com/jogonba2/delt/issues"
Documentation = "https://github.com/jogonba2/delt"

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "ruff>=0.12.11",
    "toml>=0.10.2",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "import-untyped"
